syntax = "proto3";

option go_package = "./;mul";

package mul;
import "google/api/annotations.proto";

service MulService {
  rpc HandleMul (MulRequest) returns (MulReply) {
    option (google.api.http) = {
      post: "/v1/mul/handleMul"
      body: "*"
    };
  }
}

message MulRequest {
  double a = 1;
  double b = 2;
}

message MulReply {
  double result = 1;
}